# ntetris

./: .gitignore  README.md  classes.py  components.py  delete_me  game.py  main.py  observer.py  pyproject.toml  requirements.txt  scoreboard.json  settings.py  tetris.py  ui.py
.old/: o_components.py  o_game.py  o_settings.py  scoreboard.json
not_tetris/: README.md  class_models.py
old/: o_components.py  o_ui.py
skeletons/: components.py  game.py  settings.py  tetris.py
src/: board.py  components.py  drawables.py  game.py  observers.py  settings.py  stats.py  ui.py  windows.py
tests/: test_block.py  test_board.py  test_game.py  testing_tools.py
